@@ -89,4 +89,6 @@ void glatex_insert_ref_activated(G_GNUC_UNUSED GtkMenuItem * menuitem,
 void glatex_replace_special_character();
 void glatex_insert_usepackage_dialog(G_GNUC_UNUSED GtkMenuItem * menuitem,
 	 G_GNUC_UNUSED gpointer gdata);
+void glatex_insert_command_activated(G_GNUC_UNUSED GtkMenuItem * menuitem,
+	 G_GNUC_UNUSED gpointer gdata);
 #endif
